--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">project</string>
     <string name="error_occured">Произошла ошибка</string>
+    <string name="profile">Профиль</string>
+    <string name="edit_profile">Редактирование</string>
+    <string name="resume">Резюме</string>
+    <string name="name">Имя</string>
+    <string name="link">Ссылка</string>
+    <string name="camera">Камера</string>
+    <string name="gallery">Галерея</string>
 </resources>
